# Capella

./: CMakeLists.txt  README.md
include/GPUJPEG/: Lion.h  gpujpeg.h  gpujpeg_colorspace.h  gpujpeg_common.h  gpujpeg_dct_gpu.h  gpujpeg_encoder.h  gpujpeg_encoder_internal.h  gpujpeg_huffman_gpu_encoder.h  gpujpeg_preprocessor.h  gpujpeg_reader.h  gpujpeg_table.h  gpujpeg_writer.h
include/Utils/: timer.h  utils.h
scripts/: ffmpeg.txt
src/: CMakeLists.txt
src/BGR2BGRPLANAR/: Bgr2Bgrplanar.cu
src/BGR2GRAY/: Bgr2Gray.cu
src/GPUJPEG/: Lion.cpp  gpujpeg_common.cpp  gpujpeg_dct_gpu.cu  gpujpeg_encoder.cpp  gpujpeg_huffman_gpu_encoder.cu  gpujpeg_preprocessor.cu  gpujpeg_reader.cpp  gpujpeg_table.cpp  gpujpeg_writer.cpp
src/RESIZE/: Resize.cu  Resize.cu.bk  Resize_bk.cu.bk
test/: CMakeLists.txt  test_bgr2grey.cpp  test_jpg_encoder.cpp  test_resize.cpp  test_resize_bgrplanar.cpp  test_resize_bgrplanar_substrate_mean.cpp  test_resize_int.cpp
